<resources>
    <string name="app_name">Help Me</string>
    <string name="invalid_email">invalid email!</string>
    <string name="invalid_password">invalid password!</string>
    <string name="registration_error">An unexpected error occurred! please check your internet</string>
    <string name="signup_button_label">Sign up</string>
    <string name="signup_button_label_signing_up">signing up…</string>
    <string name="login_auth_failed">no such user exists!</string>
    <string name="login_button_label">Login</string>
    <string name="login_button_label_logging_in">logging in…</string>
    <string name="menu">Menu</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="post_for_help">Post For Help</string>
    <string name="help_feed">Help Feed</string>
    <string name="monitor_user">Monitor User</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up_here">Don’t have an account? Sign up here.</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here.</string>
    <string name="create_an_account">Create an Account</string>
    <string name="add_icon_Alt">add</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_phone_number">invalid phone number</string>
    <string name="invalid_username">invalid username</string>
    <string name="emergencyContactUsernameHint_TextView">Username are atleast 4 letters</string>
    <string name="emergencyContactPhoneHint_TextView">A valid 11 digit phone number</string>
    <string name="emergencyContactDialogTitle_TextView">New emergency contact</string>
    <string name="invalid_emergency_contact">Invalid name and/or phone number!</string>
    <string name="hard_logout">Sorry, you have to login again!</string>
    <string name="name">Name</string>
    <string name="failed_to_connect">An unexpected error occurred! please check your internet.</string>
    <string name="delete_icon_Alt">delete</string>
    <string name="emergencyContactName_TextView">Name</string>
    <string name="emergencyContactPhone_TextView">+880 12345678910</string>
    <string name="emergencyContactsEmpty_TextView">No emergency contacts found.</string>
    <string name="date_of_birth">Date of Birth (dd/mm/yyyy)</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="my_profile">My Profile</string>
    <string name="invalid_date_of_birth">date format: dd/mm/yyyy</string>
    <string name="invalid_address">Invalid address</string>
    <string name="saving">Saving…</string>
    <string name="loading">Loading…</string>
    <string name="success">User info loaded</string>
    <string name="helpPostContent_EditText_hint">Write post description…</string>
    <string name="helpPost_capturedPhoto_ImageView_Alt">taken_image</string>
    <string name="helpPost_takePhoto_Button_label">Take Photo</string>
    <string name="helpPost_Address_EditText_hint">address (Optional)</string>
    <string name="helpPost_PickLocation_Button_label">Fetch Location</string>
    <string name="helpPost_makePublic_CheckBox_label">Make post public</string>
    <string name="helpPost_Post_Button_label">Post</string>
    <string name="sign_up_title">Sign up</string>
    <string name="login_title">Login</string>
    <string name="menu_title">Menu</string>
    <string name="emergency_contacts_title">Emergency Contacts</string>
    <string name="setup_profile_title">Setup Profile</string>
    <string name="help_post_title">Help Post</string>
    <string name="no_default_camera_app_found">No default camera app found</string>
    <string name="fetching_location">Fetching Location…</string>
    <string name="location_fetched">Location Fetched!</string>
    <string name="location_fetch_failed">Location fetch failed, please try again</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_settings_explanation">We need Location, Wifi and Bluetooth enabled to get your accurate location</string>
    <string name="ok">OK</string>
    <string name="location_permission">Location Permission</string>
    <string name="location_permission_permanantely_denied_explanation">Please allow location from for the app from your device Settings.</string>
    <string name="location_permission_explanation">Location permission is absolutely required to fetch your current location.</string>
    <string name="invalid_description">invalid description</string>
    <string name="location_is_innaccurate">Location is innacurate. Do you want retry fetching location?</string>
    <string name="retry">Retry</string>
    <string name="ignore_and_send">ignore</string>
    <string name="no_location_error">Please click "Fetch Location" button</string>
    <string name="image_upload_failed">Failed to upload the photo, try again.</string>
    <string name="posting">Posting…</string>
    <string name="posted">Sent!</string>
    <string name="sms_permission">SMS Permission</string>
    <string name="sms_permission_permanantely_denied_explanation">Please allow SMS permission from your device settings, which is necessary to reach your emergency contacts.</string>
    <string name="sms_permission_explanation">We need SMS permission to reach your emergency contacts. Sorry for the interruption</string>
    <string name="helpPost_phoneNumber_editTextHint">Your 11 digit phone number</string>
    <string name="failed_to_send_sms">Failed to send SMS! check your SIM network/balance</string>
    <string name="failed_to_send_sms_but_uploaded_to_database">Failed to send SMS! but post saved to server.</string>
    <string name="phoneNumber_singleHelpPost_TextView_placeholder">+88012345678910</string>
    <string name="address_singleHelpPost_TextView_placeholder">some, provided, address</string>
    <string name="time_singleHelpPost_TextView_placeholder">12/07/98 12:24:47</string>
    <string name="content_singleHelpPost_TextView_placeholder">The content containing brief description provided by the person who posted this help post</string>
    <string name="contact_singleHelpPost_Button_label">Contact</string>
    <string name="showLocation_singleHelpPost_Button_label">Show Location</string>
    <string name="helpPost_photo_alt">post_photo</string>
    <string name="searching_singleHelpPost_TextView">Loading please wait…</string>
    <string name="failed_to_load_post">Failed to load post. Tap to try again.</string>
    <string name="no_address">No Address Provided</string>
    <string name="helpFeed_empty_TextView">Nothing found.</string>
    <string name="subtitle">Stand against the social violence around you</string>
    <string name="appTitle">Help Me App</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="location_tracking">Location Tracking</string>
    <string name="danger_mode">Danger Mode</string>
    <string name="receive_nearby_distress_calls">Receive Nearby Distress Calls</string>
    <string name="logout_from_account">Logout from Account</string>
    <string name="no_internet">No internet!</string>
    <string name="please_enable_internet_to_continue">Please enable internet connection to continue</string>
    <string name="internet_connection_lost">Internet connection lost!</string>
    <string name="enter_you_valid_11_digit_phone_number">Enter you valid 11 digit phone number</string>
    <string name="submit">Submit</string>
    <string name="your_valid_11_digit_phone_number">Your valid 11 digit phone number</string>
    <string name="_880">+880</string>
    <string name="otp_code">OTP code</string>
    <string name="enter_the_6_digit_code_sent_to_your_phone">Enter the 6 digit code sent to your phone</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="address_input_is_optional">Address input is optional</string>
    <string name="emergency_mode">Emergency Mode</string>
    <string name="emergency_mode_explanation">Seek help instantly by pressing power button once and then volume keys continuously <b><u>Tap here for details</u></b></string>
    <string name="find_safe_places">Find Safe Places</string>
    <string name="seek_help">Seek Help</string>
    <string name="logout">Logout</string>
    <string name="back">back</string>
    <string name="continue_">Continue</string>
    <string name="me">Me</string>
    <string name="someone_else">Someone else</string>
    <string name="who_needs_help">Who needs help?</string>
    <string name="nearby_posts">Nearby Posts</string>
    <string name="help_feed_location_placeholder_text">5 help posts found near Mirpur-1, Janata Housing, Dhaka-1216</string>
    <string name="invalid_otp_code">Verification code invalid!</string>
    <string name="unexpected_error">Sorry an unexpected error occurred!</string>
    <string name="phone_verification_error">make sure you phone number is valid and connected to internet</string>
    <string name="verifying">Verifying…</string>
    <string name="saved">Saved!</string>
    <string name="fetch_my_current_location_as_home_address">Fetch my current location as Home Address</string>
    <string name="home_address_taken">Home address fetched</string>
    <string name="title_activity_find_safe_places">Find safe places</string>
    <string name="failed_to_get_current_location">Failed to show current location.</string>
    <string name="unsafe_location_description_placeholder">Some description of why this location is unsafe.</string>
    <string name="unsafe_location_time_placeholder">Between 11.00 PM - 3.00 AM</string>
    <string name="emergency_mode_steps_title">How to trigger instant help post?</string>
    <string name="emergency_mode_steps_content"><b><u>Step-1</u></b> Keep the emergency mode turned on.\n\n<br /><br /><b><u>Step-2</u></b> Press the power button(lock button) once.\n\n<br /><br /><b><u>Step-3</u></b> Press volume up button two times.\n\n<br /><br /><b><u>Step-4</u></b> Press volume down button two times.\n\n<br /><br /><b><u>Step-5</u></b> Your phone will vibrate to let you know that a help request has been sent.</string>
    <string name="emergency_mode_requirements_title">For an help post to be triggered you <u>MUST</u> make sure,</string>
    <string name="emergency_mode_requirements_content"><b>1.</b> Internet is connected (via wifi or mobile network).\n\n<br /><br /><b>2.</b> Location is turned on.\n\n<br /><br /><b>3.</b> Your phone has an <b><u>active SIM card with balance</u></b> to reach your emergency contacts by SMS.</string>
    <string name="close_icon_alt">close</string>
</resources>