<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_v2"
    tools:context=".appScreens.v2_activities.EnterPhoneNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_app_logo_dark_v2" />

        <EditText
            android:id="@+id/activity_enter_phone_number_phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_edittext"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/your_valid_11_digit_phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="16dp"
            android:text="@string/_880" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/segoeui"
            android:padding="8dp"
            android:text="@string/enter_you_valid_11_digit_phone_number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_gradient_color"
            android:padding="8dp"
            android:text="@string/submit"
            android:textColor="@color/light_v2" />
    </LinearLayout>
</RelativeLayout>