<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/custom_ec_itemview_background"
    android:elevation="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:weightSum="100">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:foregroundGravity="center"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_user_1"
        android:contentDescription="@string/username" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="95"
        android:orientation="vertical">

        <TextView
            android:id="@+id/emergencyContactName_itemView__TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/segoebold"
            android:padding="4dp"
            android:text="@string/emergencyContactName_TextView"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_id_card_1" />

        <TextView
            android:id="@+id/emergencyContactPhone_itemView__TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/segoebold"
            android:padding="4dp"
            android:text="@string/emergencyContactPhone_TextView"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_entypo_old_phone" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/emergencyContactDelete_itemView_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:background="@color/whiteTransparent"
        android:contentDescription="@string/delete_icon_Alt"
        android:foregroundGravity="center"

        android:padding="8dp"
        android:src="@drawable/ic_delete" />
</LinearLayout>