<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appScreens.activities.SingleHelpPostActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_app_logo_dark_v2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="@font/segoeui"
            android:padding="4dp"
            android:text="@string/help_post_title"
            android:textColor="@color/dark_blue_v2"
            android:textSize="24sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/singleHelpPost_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/light_blue_v2"
        android:elevation="4dp"
        android:padding="2dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/phoneNumber_singleHelpPost_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/segoeui"
                android:text="@string/phoneNumber_singleHelpPost_TextView_placeholder"
                android:textSize="14sp"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/ic_phone_icon" />

            <TextView
                android:id="@+id/address_singleHelpPost_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:drawablePadding="6dp"
                android:fontFamily="@font/segoeui"
                android:text="@string/address_singleHelpPost_TextView_placeholder"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/time_singleHelpPost_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:drawablePadding="8dp"
                android:fontFamily="@font/segoeui"
                android:text="@string/time_singleHelpPost_TextView_placeholder"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_calendar" />

            <ImageView
                android:id="@+id/photo_singleHelpPost_ImageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/helpPost_photo_alt"
                android:foregroundGravity="center"
                android:visibility="gone"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/content_singleHelpPost_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/segoeui"
                android:padding="4dp"
                android:text="@string/content_singleHelpPost_TextView_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/contact_singleHelpPost_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="50"
                android:background="@drawable/custom_button2"
                android:drawableStart="@drawable/ic_entypo_old_phone"
                android:elevation="2dp"
                android:fontFamily="@font/segoebold"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/contact_singleHelpPost_Button_label"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue_v2"
                android:visibility="gone" />

            <Button
                android:id="@+id/showLocation_singleHelpPost_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="50"
                android:background="@drawable/custom_button2"
                android:drawableStart="@drawable/ic_location"
                android:elevation="2dp"
                android:fontFamily="@font/segoebold"
                android:gravity="center"
                android:onClick="showLocationClick"
                android:padding="16.5dp"
                android:text="@string/showLocation_singleHelpPost_Button_label"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue_v2" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/searching_singleHelpPost_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/segoeui"
        android:foregroundGravity="center"
        android:gravity="center"
        android:onClick="retryClick"
        android:text="@string/searching_singleHelpPost_TextView"
        android:textSize="18sp"
        android:visibility="visible" />

</RelativeLayout>